--- a/plant.ipynb
+++ b/plant.ipynb
@@ -33,7 +33,8 @@
     "from fastai.sgdr import *\n",
     "from fastai.plots import *\n",
     "from glob2 import glob\n",
-    "from sklearn.metrics import f1_score"
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import confusion_matrix"
    ]
   },
   {
@@ -598,7 +599,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9480022ea8a8433fb371f145de2bf1f7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.       0.15937  0.16884  0.94194]                      \n",
+      "[ 1.       0.16732  0.15039  0.95378]                      \n",
+      "[ 2.       0.1304   0.13682  0.95795]                      \n",
+      "[ 3.       0.11524  0.13769  0.95046]                      \n",
+      "[ 4.       0.09853  0.1396   0.96211]                       \n",
+      "[ 5.       0.08542  0.13047  0.96003]                       \n",
+      "[ 6.       0.07392  0.13036  0.96003]                       \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "learn.unfreeze()\n",
+    "learn.fit(lrs, 3, cycle_len=1, cycle_mult=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cm = confusion_matrix(y,preds)\n",
+    "plot_confusion_matrix(cm,data.classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -609,20 +661,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.92947368421052634"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "f1(pred,y)"
    ]
@@ -640,26 +681,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.99926817"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.exp(submission[0]).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 104,
    "metadata": {
     "collapsed": true
@@ -667,56 +688,6 @@
    "outputs": [],
    "source": [
     "submission = np.argmax(np.exp(submission),axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 5,  5,  6,  8, 10, 11,  8,  2,  1,  3,  5, 11,  1,  3,  3, 10,  6,  8,  5,  6,  8, 10,  6, 11, 10,  2,\n",
-       "        5,  7,  2,  1,  3,  1,  5,  9,  3,  1,  3,  9,  5,  5,  4,  0,  1,  1, 10,  8,  6, 10, 11,  2,  6,  3,\n",
-       "        2,  1,  8, 10,  7,  8, 10,  6,  5,  5,  5,  9,  9,  4,  3,  7,  0,  1,  6,  6,  6, 11,  5,  6,  3,  9,\n",
-       "        1,  3,  5,  9,  8, 11,  1, 11,  7,  6,  6,  5,  9,  8,  6,  1,  6,  7, 11, 10,  7, 10, 11,  4,  5,  6,\n",
-       "        8, 10,  1,  6,  2,  9,  9,  8, 10,  8,  3, 11, 10,  4,  6,  9,  9,  8,  2,  3,  5, 11,  0, 11, 10,  1,\n",
-       "       11,  8,  5,  8,  8,  3,  6,  1,  6, 11, 11,  8,  6, 10,  6,  6,  6,  3,  5, 11,  3,  2,  6,  7, 10,  4,\n",
-       "        2,  3,  0,  8,  8,  8,  6, 11,  3, 11,  0,  0, 10,  1, 10,  4,  9,  6,  6, 11,  2,  1,  1, 11,  8,  5,\n",
-       "        8,  6, 11,  3,  1, 10, 10,  7,  3, 10,  5,  9,  3,  5,  1,  6,  3,  0,  6, 11,  2, 10,  1, 10,  1,  1,\n",
-       "        6,  3,  9,  8,  6,  3,  6,  8,  2,  3,  1,  0,  6,  1,  5, 10,  3, 11,  1, 10,  6,  4,  5,  7,  6,  3,\n",
-       "       10,  2,  6,  8,  6,  6, 10,  6,  2,  9,  8,  3,  3, 11,  7,  6,  0,  8,  2,  3,  1,  5,  4,  3,  6,  6,\n",
-       "        3,  3,  6,  6,  7,  1, 11,  4,  5,  6,  1,  3,  6,  3, 10,  9,  3, 10,  4,  4,  3, 10,  6,  4,  3,  2,\n",
-       "        2,  6,  9,  3, 10, 10,  9, 10,  3,  2,  6,  5,  4,  1, 11,  4,  2,  9,  5,  9, 11, 11,  1, 10,  2,  8,\n",
-       "        5,  6,  8,  8,  8, 10,  8,  6,  6,  8, 10,  8,  6,  8,  3,  3,  6,  1, 10,  9,  8, 11,  6,  6, 11,  6,\n",
-       "        3,  6,  9,  3,  6, 10,  5,  5,  6,  4,  8,  4,  6,  7,  1,  4,  3, 10,  0, 11,  2,  9,  3,  5, 11, 10,\n",
-       "        0,  3,  2,  3,  6, 11,  9,  1,  6,  3,  2, 10,  4,  4,  7,  8,  8,  3,  3,  6,  3,  8,  8, 11,  6,  3,\n",
-       "       11,  9,  8, 10,  3,  6, 10, 10,  5,  2, 11,  6,  8,  7,  6,  3,  6,  8,  6,  7,  1,  7, 11, 11,  5,  6,\n",
-       "        8,  3, 11,  8,  1,  7,  6,  3,  5,  9,  6,  8,  9,  5,  6,  6,  5,  3,  3,  6,  2,  6,  8,  8,  5,  9,\n",
-       "        9,  6, 11, 10,  6,  8,  5,  3, 11, 10, 11,  3,  8,  6, 10,  3,  9,  6,  3, 11,  5, 10,  2,  5,  5,  3,\n",
-       "       11,  6,  3,  3,  1,  6, 11, 10,  8,  6,  1,  8, 10,  3,  1,  7,  5, 11,  8,  3,  6,  1,  2,  6,  6,  3,\n",
-       "        5,  5,  3,  6,  2,  4,  8,  6,  3, 11,  9,  4,  9,  3,  6,  5, 10,  9,  5, 10,  1,  6,  9,  6,  8,  3,\n",
-       "        6,  6, 10,  5,  1,  2,  8,  8, 11,  9,  3,  8, 11,  6,  3,  6,  6,  6,  9,  8,  6,  6,  8,  1, 11,  5,\n",
-       "        4,  6,  6,  0,  0,  7, 10,  6,  6,  6,  5,  3, 11, 11,  8, 11,  8,  8,  6,  6,  6,  3,  2,  7,  2,  2,\n",
-       "        1,  3,  2,  1,  8, 10, 11,  2, 10, 11,  4,  9, 10,  5,  3,  9,  6,  5, 10,  1, 11, 10,  4, 11,  6,  8,\n",
-       "        3,  1,  2,  6,  4,  2, 10,  3, 10,  6,  2, 11,  0,  7,  9,  5,  3, 10,  4,  7,  1,  6,  4,  5, 11,  7,\n",
-       "        8,  6,  3,  3,  8,  7,  3,  1,  6, 11,  6,  6,  6, 10,  1, 10,  7, 11,  2,  6,  8, 10,  3,  1, 10,  2,\n",
-       "        1, 10,  7,  5,  6,  1,  7,  6, 11,  4,  3,  5,  3,  9, 11,  5, 10,  6,  7,  2,  8,  1,  7,  8,  8,  5,\n",
-       "        3,  2,  3,  6,  8, 11, 11,  7,  9,  6,  2, 11,  1,  5,  5,  9,  7,  9,  3, 10,  8,  3,  2,  2,  4, 11,\n",
-       "        0,  8,  6,  9, 11,  8,  9,  8,  6,  7, 11,  8,  5,  1,  7, 11,  9,  8,  1, 10,  1,  6,  9, 11,  2, 10,\n",
-       "       11,  3, 11,  6, 10,  4,  3, 10,  6, 10,  6,  6,  8,  5,  1,  3, 10,  5,  8, 11,  1,  5,  6, 11,  8,  1,\n",
-       "        4,  1,  3,  6,  6,  3,  8,  8,  5,  3,  8,  4,  6, 10,  2,  6,  7, 10,  3,  1,  5,  6,  1, 11,  2, 11,\n",
-       "        6,  3,  6,  0,  6, 10,  8, 11,  8,  9, 10,  7,  6,  8])"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "submission"
    ]
   },
   {
@@ -778,13 +749,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 118,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "submission_df = pd.DataFrame({'file': test_df, 'species': species})\n",
+    "submission_df.species.replace('_',' ',regex=True,inplace =True)\n",
     "submission_df.to_csv('submission.csv.gz', compression = 'gzip',index=False)"
    ]
   },
